--- a/map.html
+++ b/map.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jelagava laikā</title>
+    <title>Jelgava laikā</title>
 </head>
 <body>
-    <title>TEST</title>
+    <h2>TEST</h2>
 </body>
 </html>
