Changed how JSON is fetched

--- a/map-maker.html
+++ b/map-maker.html
@@ -11,7 +11,7 @@
     <div id="hack"></div>
     <div id="container">
         <div id="map"></div>
-        <div id="description">
+        <div id="houston">
             JSON
 
 
