Map maker alpha is (in)completed
map-maker now stores changes to JSON. Need CSS

--- a/map-maker.html
+++ b/map-maker.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <h2>MAP MAKER</h2>
-    <div id="hack"></div>
     <div id="container">
         <div id="map"></div>
         <div id="houston">
-            JSON
+            <div id="hack"></div>
+            <input type="number" id="size" value="0.000" step="0.001">
+            <input type="number" id="age" value="vecums" step="1">
+            <button id="delete">Dzēst</button>
+            <button id="next">Nākamā</button>
+            <button id="save">Saglabāt</button>
 
 
         </div>
@@ -27,4 +31,6 @@
      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
      crossorigin=""></script>
 <script src="map-maker.js"></script>
+
+
 </html>
