--- a/map-maker.html
+++ b/map-maker.html
@@ -13,7 +13,7 @@
         <div id="houston">
             <div id="hack"></div>
             <input type="number" id="size" value="0.000" step="0.001">
-            <input type="number" id="age" value="vecums" step="1">
+            <input type="number" id="age" value="0" step="1">
             <button id="delete">Dzēst</button>
             <button id="next">Nākamā</button>
             <button id="save">Saglabāt</button>
